--- a/app/styles/basic/_variables.scss
+++ b/app/styles/basic/_variables.scss
@@ -19,6 +19,7 @@ $tableBorder: #BBBBBB;
 // end bootstrap overrides
 
 $dataTableBorder: #BBBBBB;
+$border: #BBBBBB;
 
 // Color Indicators
 $danger: #be1e2d;
