--- a/app/styles/common/_charts.scss
+++ b/app/styles/common/_charts.scss
@@ -56,8 +56,7 @@
 .payments-chart {
   @extend %center;
   position: relative;
-  top: -20px;
-  padding: 0 20px 10px;
+  padding: 20px 20px 10px;
 
   .chart-label-primary {
     margin-bottom: 0;
