--- a/app/styles/common/_indicators.scss
+++ b/app/styles/common/_indicators.scss
@@ -63,7 +63,7 @@
   height: 30px;
   min-width: 35px;
   background: $white;
-  padding: 5px 10px;
+  padding: 7px 10px;
   margin: 6px 15px 6px 15px;
   border: 1px solid #808080;
 
